<resources>
    <string name="app_name">水印</string>

    <string name="action_about">关于</string>

    <string name="choose_tip">请选择需要编辑的图片</string>
    <string name="edit_save">保存</string>
    <string name="edit_open">选择</string>
    <string name="edit_saving">保存中…</string>
    <string name="edit_saved">保存到</string>
    <string name="edit_not_edit">请先编辑图片</string>
    <string name="edit_load_file_failed">图片加载失败, 请重试:(</string>

    <string name="edit_dialog_title">编辑水印</string>
    <string name="edit_dialog_tag_text">水印</string>
    <string name="edit_dialog_save">保存</string>
    <string name="edit_dialog_cancel">取消</string>
    <string name="edit_dialog_remember">记住</string>

    <string name="setting_basic_title">基础设置</string>
    <string name="setting_title">标题</string>
    <string name="setting_subtitle">副标题</string>
    <string name="setting_double_line">是否显示两行</string>
    <string name="setting_label">设置</string>
    <string name="setting_advance_title">高级设置</string>
    <string name="setting_advance_user_logo">自定义水印</string>
    <string name="setting_advance_select_logo">选择水印</string>
    <string name="setting_advance_local_logo">选择预设水印</string>


    <string name="about_my_github">https://github.com/zhaolin1230/OnePlusWatermark.git</string>
    <string name="about_open_source">开源项目</string>
    <string name="about_open_source_git">[matisse]\n[permissionsdispatcher]</string>
</resources>
