<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/setting_basic_title" >
        <CheckBoxPreference
            android:key="doubleLinePreference"
            android:title="@string/setting_double_line"/>

        <EditTextPreference
            android:key="titlePreference"
            android:title="@string/setting_title" />

        <EditTextPreference
            android:key="subTitlePreference"
            android:title="@string/setting_subtitle" />

        <!--<EditTextPreference-->
            <!--android:key="water_mark_preference"-->
            <!--android:summary="water_mark"-->
            <!--android:title="Watermark" />-->

    </PreferenceCategory>

</PreferenceScreen>
